Fix mobile vesion dark mode bg color

--- a/resources/public/css/style.main.less
+++ b/resources/public/css/style.main.less
@@ -51,6 +51,7 @@ body {
   letter-spacing: .01em;
   .highlight(@green);
 }
+
 .dark-overlay {
   background: @darkgrey;
 }
@@ -1014,7 +1015,6 @@ nav.subnav {
     width: 48.5%;
     max-width: 550px;
     border-radius: 10px;
-    background-color: #070a0e;
     border: 1px solid #666;
     position: relative;
     text-align: center;
@@ -1793,9 +1793,6 @@ nav.subnav {
 #hegex-container {
   overflow-x: scroll;
 }
-  body {
-    background-color: #070a0e;
-  }
   section {
     .sidepadM;
   }
